<resources>
    <string name="app_name">SplitTheCost</string>
    <string name="action_settings">Settings</string>
    <string name="numPeople">人数：</string>
    <string name="people">人</string>
    <string name="money">お金：</string>
    <string name="yen">円</string>
    <string name="calc">計算</string>
    <string name="oneMoney">一人当たりの金額</string>
    <string name="result">xxxxxxxxx</string>
</resources>
